# advertising-linear-regression

./: .gitignore  README.md  SETUP.md  pyproject.toml
.claude/agents/: ResearchEngineer.agent.md
.claude/agents/coding-workflow/: SKILL.md
.claude/agents/ml-engineering/: SKILL.md
.claude/agents/research-paper/: SKILL.md
.claude/agents/research-paper/references/: isl-advertising-refs.md  statistics.md
.claude/agents/skill-lr-report/: SKILL.md  report.md
.claude/agents/skill-lr-report/references/: isl_refs.md  paper_content.md  statistics.md
.claude/agents/statistical-analysis/: SKILL.md
data/: Advertising Sales Dataset.md  advertising_sales_dataset.md
notebooks/: advertising_analysis.ipynb  ch3_linear_regression.ipynb  linear_regression.ipynb
report/: ad-analytis-vi.md  ad-analytis.md  advertising_lr_paper.docx  slides-vi.html
