[project]
name = "advertising-linear-regression"
version = "0.1.0"
description = ""
authors = [
    {name = "zoetruong2110",email = "zoetruong2110@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "jupyter (>=1.1.1,<2.0.0)",
    "ipykernel (>=7.2.0,<8.0.0)",
    "pandas (>=2.1.0)",
    "numpy (>=1.26.0)",
    "matplotlib (>=3.8.0)",
    "statsmodels (>=0.14.0)",
    "scipy (>=1.11.0)",
    "scikit-learn (>=1.3.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
